Remove deprecated GSON. Upgrade Kafka and Kafka clients versions. Replace deprecated gradle methods with modern ones. Remove jarjar library. Replace deprecated usages of Long. Replace deprecated StringUtils from spring. Replace java Date.