@@ -132,11 +132,15 @@ public class HaFlowValidationService {
                 .flatMap(e -> e.getFlowSpeakerData().stream()).collect(Collectors.toList());
         int rulesCount = actualSpeakerData.size();
         actualSpeakerData.addAll(metersDumpResponses.stream()
-                .flatMap(e -> e.getMeterSpeakerData().stream()).collect(Collectors.toList()));
-        int metersCount = new Long(metersDumpResponses.stream()
-                .mapToLong(e -> e.getMeterSpeakerData().size()).sum()).intValue();
+                .flatMap(e -> e.getMeterSpeakerData().stream()).toList());
+        long metersCountLong = metersDumpResponses.stream()
+                .mapToLong(e -> e.getMeterSpeakerData().size()).sum();
+        if (metersCountLong > (long) Integer.MAX_VALUE) {
+            log.warn("metersCount value {} is going to be narrowed", metersCountLong);
+        }
+        int metersCount = (int) metersCountLong;
         actualSpeakerData.addAll(groupDumpResponses.stream()
-                .flatMap(e -> e.getGroupSpeakerData().stream()).collect(Collectors.toList()));
+                .flatMap(e -> e.getGroupSpeakerData().stream()).toList());
 
         Map<SwitchId, List<SimpleSwitchRule>> actualSimpleSwitchRulesBySwitchId
                 = simpleSwitchRuleConverter.convertSpeakerDataToSimpleSwitchRulesAndGroupBySwitchId(actualSpeakerData);
