@@ -104,7 +104,7 @@ public class FlowValidationService {
             throws FlowNotFoundException, SwitchNotFoundException {
 
         Optional<Flow> foundFlow = flowRepository.findById(flowId);
-        if (!foundFlow.isPresent()) {
+        if (foundFlow.isEmpty()) {
             throw new FlowNotFoundException(flowId);
         }
         Flow flow = foundFlow.get();
@@ -118,13 +118,17 @@ public class FlowValidationService {
 
         List<SpeakerData> actualSpeakerData = flowDumpResponses.stream()
                 .flatMap(e -> e.getFlowSpeakerData().stream()).collect(Collectors.toList());
-        int rulesCount = actualSpeakerData.size();
         actualSpeakerData.addAll(metersDumpResponses.stream()
-                .flatMap(e -> e.getMeterSpeakerData().stream()).collect(Collectors.toList()));
-        int metersCount = new Long(metersDumpResponses.stream()
-                .mapToLong(e -> e.getMeterSpeakerData().size()).sum()).intValue();
+                .flatMap(e -> e.getMeterSpeakerData().stream()).toList());
+        long metersCountLong = metersDumpResponses.stream()
+                .mapToLong(e -> e.getMeterSpeakerData().size()).sum();
+        if (metersCountLong > (long) Integer.MAX_VALUE) {
+            log.warn("metersCount value {} is going to be narrowed", metersCountLong);
+        }
+        int metersCount = (int) metersCountLong;
+
         actualSpeakerData.addAll(groupDumpResponses.stream()
-                .flatMap(e -> e.getGroupSpeakerData().stream()).collect(Collectors.toList()));
+                .flatMap(e -> e.getGroupSpeakerData().stream()).toList());
 
         Map<SwitchId, List<SimpleSwitchRule>> actualSimpleSwitchRulesBySwitchId
                 = simpleSwitchRuleConverter.convertSpeakerDataToSimpleSwitchRulesAndGroupBySwitchId(actualSpeakerData);
@@ -142,6 +146,7 @@ public class FlowValidationService {
         boolean filterOutUsedSharedRules = false;
         List<SpeakerData> expectedForwardRules = ruleManager.buildRulesForFlowPath(flow.getForwardPath(),
                 filterOutUsedSharedRules, dataAdapter);
+        int rulesCount = actualSpeakerData.size();
         flowValidationResponse.add(compareAndGetDiscrepancies(
                 actualSimpleSwitchRulesBySwitchId,
                 simpleSwitchRuleConverter.convertSpeakerDataToSimpleSwitchRulesAndGroupBySwitchId(expectedForwardRules)
